<resources>
    <string name="app_name">Wage Motivator</string>
    <string name="btn_save">Save</string>
    <string name="daily_wage">Daily wage:</string>
    <string name="starting_at">Starting at:</string>
    <string name="finishing_at">Finishing at:</string>
    <string name="euro_symbol">€</string>
    <string name="time_to_finish">Time to finish:</string>
    <string name="today_i_earned">Today I earned:</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="contact_us">Contact Us</string>
    <string name="report_bug">Report Bug</string>
    <string name="about">About</string>
    <string name="weekend">Weekend:</string>
    <string name="you_broke_my_progress_bar">You BRoKe mY pRoGreSs bAr!!</string>

    <string name="about_text">
        <![CDATA[

        Welcome to Wage Motivator! Maybe you are wondering why did someone put time and effort in order to
        develop a <b>useless</b> app like me. The reason is simple: that <b>someone</b> was getting very bored
        at work, so he decided to exercise his programming skills developing something more <b>interesting</b>
        than looking at his <b>empty desk</b>.

        <br><br>Well, here I am.

        <br><br>I was developed as a <b>nice tool</b> to remember you that, no matter what, you are still <b>being
        paid</b> for your <b>work</b> (hope so). If you didn\'t already go, just go to the <i>Settings</i> and put your
        <b>daily wage</b> (you know it, don\'t ya) and your <b>working hours</b>, and I will remember you how long it remains to finish your
        working day, and how much you have earned today, in <b>real time</b>.

        <br><br>What else to say? Enjoy! And remember, please <b>DO NOT touch MY progress bar</b>.

        ]]>
    </string>
</resources>
