<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/main_menu"
        android:title=""
        android:icon="@drawable/ic_more_vert_black_24dp"
        app:showAsAction="always">

        <menu>

            <item
                android:id="@+id/item_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/settings"
                app:showAsAction="never" />

            <item
                android:id="@+id/item_share"
                android:title="@string/share"
                android:icon="@drawable/ic_share_black_24dp"
                app:showAsAction="never" />

            <item
                android:id="@+id/item_contact_us"
                android:title="@string/contact_us"
                android:icon="@drawable/ic_email_black_24dp"
                app:showAsAction="never" />

            <item
                android:id="@+id/item_report_bug"
                android:title="@string/report_bug"
                android:icon="@drawable/ic_bug_report_black_24dp"
                app:showAsAction="never" />

            <item
                android:id="@+id/item_about"
                android:title="@string/about"
                android:icon="@drawable/ic_info_black_24dp"
                app:showAsAction="never" />

        </menu>
    </item>


</menu>